# py_sci

./: CMakeLists.txt  README.md
cmake/: FindExtOpenBLAS.cmake  FindExtOpenblas.cmake  pypi_process.py  setup.py.2.in  setup.py.3.in  setup.py.4.in  setup.py.5.in  setup.py.6.in  setup.py.7.in  setup.py.8.in  setup.py.cmake.in  setup.py.in  site.cfg.in  util.cmake
